--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -102,9 +102,9 @@
     list-style: none
 
     li
-      background: none
-      padding: 0
       margin: 10px 0
+      padding-left: 30px
+
 
     li a
       font-weight: bold
@@ -207,12 +207,6 @@ a.cta span
 
 // ----------Profile page
 
-#main article.profile
-  .big_list
-    li
-      overflow: hidden
-
-#main article.profile .big_list li form button,
 #main .profile_header form button
   border-radius: 4px
   padding: 4px 20px !important
@@ -254,40 +248,6 @@ a.cta span
   br + br
     display: none
 
-// -------------------Friends page
-
-#main article .friends_list .big_list
-  li
-    overflow: hidden
-    background: none
-    padding: 15px 0
-    border-top: 1px solid #ccc
-
-  li:first-child
-    border-top: none
-    padding-top: 0
-
-  div
-    width: 480px
-
-  .gutter_right_half
-    margin: 0
-    width: 48px
-
-  .gutter_top_half
-    margin-top: -4px !important
-    margin-bottom: -4px
-
-    a
-      font-weight: bold
-      font-size: 16px
-      letter-spacing: -.05em
-
-    button
-      margin-top: 6px
-
-  p
-    margin-bottom: 0
 
 // -------------------Reading plans settings page
 
