--- a/app/assets/stylesheets/_reader_text.scss
+++ b/app/assets/stylesheets/_reader_text.scss
@@ -234,7 +234,7 @@
   height: 1em;
 }
 
-.ili, .ili1, io, .io1, li, .li1 {
+.ili, .ili1, .io1, .li1 {
   margin-left: 2em;
   padding-left: 0;
   line-height: $reader_line_height;
