--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -10,11 +10,14 @@
 .reader_modal_header
   -webkit-font-smoothing: subpixel-antialiased
   background: #333 image-url("header.png") repeat-x
-  /* border: 1px solid #1e1e1f */
   font-size: 11px
   overflow: hidden
   height: 45px
   border-radius: 0px
+  box-shadow: 0px 0px 10px #333
+  -moz-box-shadow: 0px 0px 10px #333
+  -webkit-box-shadow: 0px 0px 10px #333
+
 
 #header h1
   margin: 0
