--- a/app/assets/stylesheets/mobile/_pagination.sass
+++ b/app/assets/stylesheets/mobile/_pagination.sass
@@ -100,7 +100,7 @@
   /* ------------- reading plan list pagination --------------- */
 
   #main
-    article.readingplans
+    #subscriptions-index
       .pagination
         margin-top: 10px
       .pagination_pages
@@ -111,7 +111,7 @@
   /* ------------- reading plan day view pagination ---------------- */
 
   #main
-    article.readingplans
+    #subscriptions-index
       .categories_menu
         dt
           overflow: hidden
