--- a/app/assets/stylesheets/mobile/_tabs.sass
+++ b/app/assets/stylesheets/mobile/_tabs.sass
@@ -91,7 +91,7 @@
   dt:first-child + dd
     border-radius: 0px
 
-#main article .combo_button + .big_list,
+#main article .combo_button + .resource_list,
 #main article .combo_button + .split_pane,
 #main article .tab_navigation + table
-  margin-top: 60px !important
+  margin-top: 40px !important
