--- a/app/assets/stylesheets/_text.sass
+++ b/app/assets/stylesheets/_text.sass
@@ -56,11 +56,10 @@ h5
 ol
   list-style: decimal
 
-ul
-  list-style: disc
-
-li
-  margin-left: 30px
+ul, li
+  list-style: none
+  margin: 0
+  padding: 0
 
 p,
 dl,
@@ -79,3 +78,11 @@ address,
 fieldset,
 figure
   margin-bottom: 20px
+
+
+// Lists
+//----------------------------------------------------------------------------------------------------
+
+li ol,
+li ul
+  margin-bottom: 0
