--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -9,6 +9,9 @@
   background: #fff
   overflow: hidden
   border: none
+  border-radius: 0
+  -moz-border-radius: 0
+  -webkit-border-radius: 0
 
 #main.main_reader article
   padding: 18px 24px 16px
@@ -481,58 +484,6 @@ div.close_tab
 //----------------------------------------------------------------------------------------------------
 
 
-
-//
-// For chunks of content that could be grouped as simple <p> and <hr/>,
-// but semantically make sense as a bigger list: Activity Stream, etc.
-//
-
-#main .big_list
-  a
-    text-decoration: none
-    line-height: 1.3em
-
-  a.action_button_grey, a.action_button_green, a.action_button_red
-    line-height: 40px
-
-  li
-    background: none
-    margin: 0
-    padding: 12px 16px
-    @extend .clearfix
-    border-top: 1px solid #ccc
-  li:first-child
-    border-top: 0
-  h4
-    margin-bottom: 12px
-  .li_bookmark
-    background:
-      image: image-url("big_list_bookmark.png")
-      position: 0 20px
-  .li_note
-    background:
-      image: image-url("big_list_note.png")
-      position: 0 13px
-  .li_social
-    background:
-      image: image-url("big_list_social.png")
-      position: 0 22px
-  .li_badge
-    background:
-      image: image-url("big_list_badge.png")
-      position: 0 19px
-  .user
-    overflow: hidden
-    img
-      float: left
-      margin-right: 10px
-    &>div
-      float: left
-  li[class^="li_"]
-    background:
-      repeat: no-repeat
-    padding-left: 26px
-
 // Book-chap-verse select table
 //---------------------------------------------------------------------------------------
 
@@ -659,7 +610,7 @@ div.close_tab
   a.close
     display: none
 
-// KM: temporary HACK to remove the share button for initial launch until 
+// KM: temporary HACK to remove the share button for initial launch until
 // it can be implemented properly
 .verse_toolbar nav a.share_btn
   display: none
