--- a/app/views/badges/_list_item.html.haml
+++ b/app/views/badges/_list_item.html.haml
@@ -5,6 +5,6 @@
   %div{style: ("margin-left: 60px;")}
     %h5
       %a{href: user_badge_path(list_item.username, list_item.slug)}= list_item.name
-    %p.negative_gutter_top_half= list_item.description
+    %p= list_item.description
     %p.small.mute
       = t('earned badge date', username: list_item.username, ago: time_ago_in_words(list_item.earned_as_date))
