--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -8,7 +8,7 @@
   %h1= t('users.my bookmarks')
   - unless @bookmarks.empty?
     .split_pane
-      .split_pane_sidebar
+      .sidebar
         %dl.labels_menu
           %dt
             = render "shared/labels_pagination", resource_list: @labels
@@ -19,8 +19,8 @@
           - @labels.each do |l|
             %dd{class: params[:label] == l.label ? "highlighted" : ""}
               = link_to "#{l.label} (#{l.total})", user_bookmarks_path(@user, label: l.label)
-      .split_pane_content
-        %ul.big_list
+      .content
+        %ul.resource_list
           = render partial: "bookmarks/list_item", collection: @bookmarks, locals: {display: :icon}
         = render "shared/pagination", resource_list: @bookmarks
   - else
