--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -11,8 +11,8 @@
         = render "shared/widget_profile_settings" unless [:recent_activity, :bookmarks, :notes].find{|rsrc| rsrc == @selected}
       = render "shared/widget_user_badges" unless @user.badges.empty?
 
-  = render partial: "user_info", locals: {user: @user, me: @me}
-  = render partial: "user_tabs", locals: {selected: @selected} if !@me
+  = render partial: "user_info", locals: {user: @user, me: @me} unless @me
+  = render partial: "user_tabs", locals: {selected: @selected} unless @me
 
   %article.profile
     - if @me
