--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -2,14 +2,12 @@
   = t("notes.list title")
 
 - content_for :sidebar do
-  
+
   %a.action_button_green{href: current_auth ? new_note_path : sign_up_path(source: "note", redirect: "/notes/new")}
     %span.icon_plus= t('new note')
   .widget.gutter_bottom_half
 
   = render '/shared/widget_ad_bible_app'
-
-
 
 %article.note
   - if current_auth
@@ -22,9 +20,11 @@
         = link_to t("notes.my notes"), user_notes_path(current_user)
   - else
     %h1= "#{@reference_title} #{t('notes.list title')}"
+
   - unless @notes.empty?
-    %ul.big_list
-      = render partial: "notes/list_item", collection: @notes, locals: {display: :avatar}
+    %ul.resource_list
+      = render partial: "notes/list_item", collection: @notes, locals: ({display: :avatar} unless @me)
     = render "shared/pagination", resource_list: @notes
+
   - else
     %div{class: "none"}= t("notes.not found")
