--- a/app/views/search/_bible_list_item.html.haml
+++ b/app/views/search/_bible_list_item.html.haml
@@ -1,5 +1,10 @@
-%li
+- item = bible_list_item
+
+%li.reference
   - if item.reference.usfm.present?
-    %a= link_to "#{item.reference.human} (#{item.version.local_abbreviation.upcase || item.version.abbreviation.upcase})", bible_path(Reference.new(item.reference.usfm, version: item.version.id))
+    %h3
+      = link_to "#{item.reference.human} (#{item.version.local_abbreviation.upcase || item.version.abbreviation.upcase})", bible_path(Reference.new(item.reference.usfm, version: item.version.id))
+
   - if item.highlight.present? || item.content.present?
-    %p.search_results= item.highlight ? item.highlight.html_safe : item.content
+    %p
+      = item.highlight ? item.highlight.html_safe : item.content
