--- a/app/views/search/_users_list_item.html.haml
+++ b/app/views/search/_users_list_item.html.haml
@@ -1,4 +1,6 @@
-%li
+- item = users_list_item
+
+%li.user
   - u = User.new(item)
   - if u.user_avatar_url
     %p.float_left.gutter_right_half
@@ -19,28 +21,3 @@
       %div.mute= t('user follows', user: u.username)
     - else
       %div.mute= t('user does not follow', user: u.username)
-  
-  / {"id"=>"2079766",
-  /     "username"=>"eprothro",
-  /     "user_avatar_url"=>
-  /      {"px_24x24"=>
-  /        "http://avatars.youversion.com/0c5d660f86706c53671db35921769537_2
-  /       "px_48x48"=>
-  /        "http://avatars.youversion.com/0c5d660f86706c53671db35921769537_4
-  /       "px_128x128"=>
-  /        "http://avatars.youversion.com/0c5d660f86706c53671db35921769537_1
-  /       "px_512x512"=>
-  /        "http://avatars.youversion.com/0c5d660f86706c53671db35921769537_5
-  /     "first_name"=>"Evan",
-  /     "last_name"=>"Prothro",
-  /     "location"=>"Austin, TX",
-  /     "im_type"=>nil,
-  /     "im_username"=>nil,
-  /     "bio"=>nil,
-  /     "website"=>"theprothros.com",
-  /     "language_tag"=>"en",
-  /     "country"=>"US",
-  /     "timezone"=>"America/Chicago",
-  /     "created_dt"=>"2010-11-09 07:03:32.415639-06",
-  /     "last_login_dt"=>"2012-02-23 12:42:03-06"},
-  
