--- a/app/views/users/devices.html.haml
+++ b/app/views/users/devices.html.haml
@@ -1,12 +1,12 @@
 - @title = "#{t('users.connected devices')} | #{@user.name || @user.username}"
 
-%ul.big_list
+%ul.resource_list
   - if @devices.present?
     - @devices.each do |d|
       %li
         %div.float_right.confirm= link_to t('remove'), device_path(d.id), method: :delete, "data-confirm-text" => t('confirm danger')
         %h4= "#{d.vendor} #{d.model}"
-        %p.mute.negative_gutter_top_half
+        %p.mute
           = d.os
           %br
           = t('registered ago', time_ago: time_ago_in_words(d.created_dt))
