--- a/app/views/users/likes.html.haml
+++ b/app/views/users/likes.html.haml
@@ -3,6 +3,6 @@
     %p= t('no likes found', username: @user.username)
 
   - else
-    %ul.big_list
+    %ul.resource_list
       = render partial: 'likes/likes', collection: @likes, locals: {display: :avatar}
     = render partial: 'shared/pagination', locals: {resource_list: @likes}
