--- a/app/views/users/self.html.haml
+++ b/app/views/users/self.html.haml
@@ -21,38 +21,38 @@
   %div{style: "clear: both;"}
   %span.header_icon_clock= t("users.recent activity")
 %article
-  %ul.big_list
+  %ul.resource_list
     - @user.recent_activity.each do |a|
       - case a
       - when Bookmark
-        %li.li_bookmark
+        %li.bookmark
           %h5
             %b{class: ("highlight" if a.highlight_color), style: ("background: ##{a.highlight_color}" if a.highlight_color)}= a.title
-          %p.mute.small.negative_gutter_top_half= link_to_references(a.reference_list)
+          %p.mute.small= link_to_references(a.reference_list)
           - if a.labels
             %p
               - a.labels.split(",").each do |l|
                 - #TODO: split labels in model
                 %a{href: "#"}= l
                 - # TODO: Label link
-          %p.mute.small.negative_gutter_top_half= time_ago_in_words(a.most_recent_date)
+          %p.mute.small= time_ago_in_words(a.most_recent_date)
       - when Note
-        %li.li_note
+        %li.note
           %h5
             %a{href: note_path(a.id), class: ("highlight" if a.highlight_color), style: ("background: ##{a.highlight_color}" if a.highlight_color)}= a.title
-          %p.mute.small.negative_gutter_top_half= link_to_references(a.reference_list)
+          %p.mute.small= link_to_references(a.reference_list)
           %p= a.content
-          %p.mute.small.negative_gutter_top_half= time_ago_in_words(a.most_recent_date)
+          %p.mute.small= time_ago_in_words(a.most_recent_date)
       - when User
         %li.li_social
           %h5
             =t('users.started following')
             =link_to(a.username, user_path(a.id))
-          %p.mute.small.negative_gutter_top_half= time_ago_in_words(a.most_recent_date)
+          %p.mute.small= time_ago_in_words(a.most_recent_date)
       - when Badge
         %li.li_badge
           %h5
             =t('badges.earned a badge')
             &mdash;
             = a.name
-          %p.mute.small_negative_gutter_top_half= a.earned
+          %p.mute= a.earned
