--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,7 @@
 - content_for :title do
   = @me ? t('users.my profile') : t('users.other user profile', username: @user.name || @user.username)
 
-%ul.big_list
+%ul.resource_list
   - if @user.recent_activity.empty?
     %p= t('no recent activity', username: @user.username)
   - else
@@ -16,11 +16,11 @@
           %h5
             =t('users.started following')
             =link_to(a.username, user_path(a))
-          %p.mute.small.negative_gutter_top_half= time_ago_in_words(a.most_recent_date)
+          %p.mute= time_ago_in_words(a.most_recent_date)
       - when Badge
         %li.li_badge
           %h5
             =t('badges.earned a badge')
             &mdash;
             = a.name
-          %p.mute.small_negative_gutter_top_half= a.earned
+          %p.mute= a.earned
