Fix version form for search page + add support for video searches in the near future.

--- a/app/assets/stylesheets/_search.sass
+++ b/app/assets/stylesheets/_search.sass
@@ -6,29 +6,27 @@
     clear: left !important
 
     .content
-      .search
-        form
-          margin-top: 15px
-          text-align: center
-          clear: both
+      #version_form
+        margin-top: 15px
+        text-align: center
+        clear: both
 
-          select
-            margin-right: 5px
-            margin-top: 10px
-            margin-bottom: 25px
-            width: 550px
+        select
+          margin-right: 5px
+          margin-top: 10px
+          margin-bottom: 25px
+          width: 550px
+    .sidebar
+      dt em
+        display: block
+        font-size: 12px
+        font-weight: normal
 
   #suggestion
     float: left
     margin-left: 20px
     margin-top: 13px
     font-size: 12px
-
-  #categories
-    dt em
-      display: block
-      font-size: 12px
-      font-weight: normal
 
   #noresults
     margin-top: 1em
