--- a/app/views/sidebars/subscriptions/_show.html.haml
+++ b/app/views/sidebars/subscriptions/_show.html.haml
@@ -14,12 +14,12 @@
     %nav.nav_right
       = link_to t("plan settings"), edit_user_subscription_path(current_user, plan_id: @plan.to_param), class: "settings_btn"
 #sb-subscription
-  .widget.widget-notice.widget_last_fixed{style: "width:268px;"}
+  .widget.widget-notice{style: "width:268px;"}
     %p
       = t("plans.sidebar notice")
       %span.exit= link_to(t("plans.exit"), shelf_user_subscription_path(current_user, subscription, content: content_page, day: day ), method: :post)
 
-  .widget.subscription{style: "margin-top:54px;"}
+  .widget.subscription
     %header
       - settings_text = t("settings")
       =link_to(edit_user_subscription_path(current_user,subscription),{class: "settings", title: settings_text}) do
