--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -757,6 +757,8 @@
           color: $blue
 
     ul#episodes
+      margin-left: 0px
+
       li
         background: none !important
         padding-left: 0px !important
@@ -801,6 +803,10 @@
         a
           margin-bottom: 30px
           clear: both
+          padding: 10px 0px !important
+
+        .pub-banner
+          width: 100%
 
   .about_content
     padding-right: 0px
