adjust forgot password for mobile, better signup confirmation experience, minor markup / css refactor.

--- a/app/assets/stylesheets/_footer.sass
+++ b/app/assets/stylesheets/_footer.sass
@@ -36,6 +36,9 @@
     float: right
     clear: right
 
+#footer.no_primary_nav
+  padding-left: 0
+
 // mobile class is added to html element for mobile pages
 html.mobile-client
 
