--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -1,7 +1,7 @@
 // `Logo
 //----------------------------------------------------------------------------------------------------
 
-#yv_logo
+#logo
   background: image-url("yv_logo.png") no-repeat 0 14px
   display: block
   color: transparent
