--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -43,8 +43,8 @@ p
 #header
   padding: 0px
 
-  a#yv_logo
-    margin-left: 20px
+  #logo
+    margin-left: 15px
 
   nav ul
     margin-right: 10px
@@ -383,7 +383,7 @@ p
   header #slideToNav
     display: none !important
 
-  header #yv_logo
+  header #logo
     display: block !important
 
   #container.no_sidebar
@@ -397,8 +397,6 @@ p
       display: none
     #nav
       width: 40%
-    #yv_logo
-      margin-left: 20px
 
   #main
     float: left
