--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -42,6 +42,7 @@
 @import mobile
 @import search
 @import resource_lists
+@import users
 
 @media only screen and (min-width: 769px)
   // ----------Style adjustments for viewports over 769px go here
@@ -63,6 +64,11 @@
   article > h1, article .inner > h1
     display: none
 
+  article h1.keep
+    font-size: 24px
+    display: block
+    margin-top: .75em
+
   #container
     padding: 0px
 
@@ -76,7 +82,7 @@
   .split_pane .sidebar,
   #nav_primary,
   header nav.sign_in,
-  #yv_logo
+  #logo
     display: none !important
 
   #reader_header
