--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,4 +1,12 @@
 !!! 5
+
+:ruby
+  # TODO: Refactor these 'floating' @instance variables into something more concise/explicit
+  container_classes = []
+  container_classes << "no_sidebar" if @sidebar == false
+  container_classes << "no_primary_nav" if @main_nav == false
+  container_class_str = container_classes.join(" ")
+
 %html{class: (@html_classes.join(' ') if @html_classes), "data-locale" => I18n.locale, id: @html_id}
 
   %head{lang: 'en-us'}
@@ -11,12 +19,6 @@
     #wrapper{class: @fixed_width == true ? 'fixed_width' : ''}
 
       = content_for?(:header) ? yield(:header) : render("/shared/header/default")
-
-      :ruby
-        container_classes = []
-        container_classes << "no_sidebar" if @sidebar == false
-        container_classes << "no_primary_nav" if @main_nav == false
-        container_class_str = container_classes.join(" ")
 
       - flash.each do |key, msg|
         %div{class: container_class_str, id: "flash_#{key}"}= msg
@@ -35,4 +37,4 @@
               = render partial: sidebar_presenter.sidebar_partial, locals: {presenter: sidebar_presenter}
 
       = render partial: '/shared/nav_mobile' unless @main_nav == false
-      = render '/shared/footer'
+      = render partial: '/shared/footer', locals: {footer_classes: container_class_str}
