--- a/app/views/users/forgot_password.html.haml
+++ b/app/views/users/forgot_password.html.haml
@@ -1,10 +1,16 @@
+:ruby
+  html_attributes(id: "forgot-password")
+
 %article
-  %h1= t('users.forgot password')
+  %h1.keep= t('users.forgot password')
   %p= t('users.forgot password copy')
   = form_tag forgot_password_path do
-    %p
-      = text_field_tag :email
-      - if current_auth
-        = submit_tag t('users.send new password button'), class: "confirm", "data-confirm-text" => t('users.yes reset and log out')
-      - else
-        = submit_tag t('users.send new password button'), class: "confirm", "data-confirm-text" => t('users.yes reset')
+    %ul
+      %li
+        = label_tag :email, t("users.email address")
+        = text_field_tag :email, nil, class: "field"
+      %li
+        - if current_auth
+          = submit_tag t('users.send new password button'), class: "confirm", "data-confirm-text" => t('users.yes reset and log out')
+        - else
+          = submit_tag t('users.send new password button'), class: "confirm", "data-confirm-text" => t('users.yes reset')
