--- a/app/views/shared/_widget_reader_help.html.haml
+++ b/app/views/shared/_widget_reader_help.html.haml
@@ -1,8 +1,7 @@
-= cache "widget_reader_help#{I18n.locale}", expires_in: a_short_time do
-  .widget.reader_help
-    %header
-      %span
-        = t("reader help.title")
-    %aside.reader_help
-      %p
-        = "#{t('reader help.line 1')}<br />".html_safe
+.widget.reader_help
+  %header
+    %span
+      = t("reader help.title")
+  %aside.reader_help
+    %p
+      = "#{t('reader help.line 1')}".html_safe
